# QuEST

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENCE.txt  README.md  bannerdraft.xcf  basicTemplate.c  compile.sh  doxyconf  main.cpp  makefile  qubits.c  runJob.sh  test.txt  timingDemo.c  tutorialExample.c  tutorial_example.c
QuEST/: ._qubits.c  ._qubits.h  CMakeLists.txt  QuEST.c  QuEST.h  QuEST_common.c  QuEST_complex.h  QuEST_debug.h  QuEST_env_local.c  QuEST_env_mpi.c  QuEST_internal.h  QuEST_newinternal.h  QuEST_ops.c  QuEST_ops.h  QuEST_ops_mixed.h  QuEST_ops_pure.h  QuEST_precision.h  QuEST_qasm.c  QuEST_qasm.h  QuEST_validation.c  QuEST_validation.h  mainpage.h  mt19937ar.c  mt19937ar.h  precision.h  qubits.c  qubits.h  qubits_debug.h  qubits_env_local.c  qubits_env_mpi.c  qubits_internal.h
QuEST/CPU/: QuEST.c  QuEST.h  QuEST_cpu.c  QuEST_cpu_distributed.c  QuEST_cpu_internal.h  QuEST_cpu_local.c  QuEST_env_local.c  QuEST_env_mpi.c  QuEST_internal.h
QuEST/GPU/: QuEST.cpp  QuEST.h  QuEST_debug.h  QuEST_env_localGPU.cu  QuEST_gpu.cu  QuEST_internal.h  QuEST_precision.h  mt19937ar.h
QuEST/funcdefs/: CPU-quest-c  CPU-quest-env-local-c  CPU-quest-env-mpi-c  CPU-quest-internal-h  GPU-quest-cpp  GPU-quest-env-localgpu-cu  GPU-quest-internal-h  QuEST structure.pptx  analyser.py  quest-common-c  quest-debug-h  quest-h  quest-newinternal-h
QuEST/include/: QuEST.h  QuEST_complex.h  QuEST_precision.h
QuEST/src/: CMakeLists.txt  QuEST.c  QuEST_common.c  QuEST_complex.h  QuEST_debug.h  QuEST_internal.h  QuEST_qasm.c  QuEST_qasm.h  QuEST_validation.c  QuEST_validation.h  mainpage.h  mt19937ar.c
examples/: CMakeLists.txt  README.md  basicTemplate.c  bernsteinVaziraniCircuit.c  bernstein_vazirani_circuit.c  damping_example.c  demoTemplate.c  extraFunctions.c  grovers_search.c  hadamard.cpp  makefile  makefileImproved  mpiJob.sh  mpiJob6T.sh  singleBarrierTiming.c  timingExample.c  timingRotation.c  tutorial.md  tutorialExample.c  tutorial_example.c
examples/automated/: README.md  apply_no_unitary_pauli_gadget.c  report_quest_env.c  reportquestenv.c
examples/debug/: CMakeLists.txt
examples/extended/: CMakeLists.txt  README.md  dynamics.c  dynamics.cpp
examples/isolated/: CMakeLists.txt  README.md  complex_arithmetic.c  initialising_krausmaps.c  initialising_krausmaps.cpp  initialising_matrices.c  initialising_paulis.c  initialising_paulis.cpp  initialising_superoperators.c  initialising_superoperators.cpp  reporting_environments.c  reporting_environments.cpp  reporting_matrices.c  reporting_paulis.c  reporting_paulis.cpp  reporting_quregs.c  setting_errorhandler.c  setting_errorhandler.cpp
examples/krausmaps/: CMakeLists.txt  initialisation.c  initialisation.cpp
examples/matrices/: CMakeLists.txt  initialisation.c  initialisation.cpp  reporting.c  reporting.cpp
examples/numbers/: CMakeLists.txt  arithmetic.c  arithmetic.cpp
examples/paulis/: CMakeLists.txt  initialisation.c  initialisation.cpp
examples/reporters/: CMakeLists.txt  env.c  env.cpp  matrices.c  matrices.cpp  paulis.c  paulis.cpp  qureg.c  qureg.cpp
examples/submissionScripts/: cpu_SLURM_example.sh  gpu_SLURM_example.sh  mpiJob.sh  mpiJob6T.sh  mpi_PBS_example.sh  mpi_SLURM_example.sh  mpi_SLURM_unit_tests.sh  ompJob.sh  ompJob6T.sh
examples/superoperators/: CMakeLists.txt  initialisation.c  initialisation.cpp
examples/tutorials/: README.md  min_example.c  min_example.cpp
tests/: CMakeLists.txt  QuESTBase.py  QuESTCore.py  QuESTFunc.py  QuESTTest.py  QuESTTypes.py  QuEST_test_gates.cpp  QuEST_test_state_initialisations.cpp  QuEST_test_unitaries.cpp  QuEST_test_utils.cpp  README.md  a.out  example.py  example.sh  linter-aggravator.cpp  main-4-getQuESTLibraryData.c  main.cpp  makefile  rotate_test.py  runTests.c  runTests.sh  test_calculations.cpp  test_data_structures.cpp  test_decoherence.cpp  test_gates.cpp  test_main.cpp  test_operators.cpp  test_state_initialisations.cpp  test_unitaries.cpp  test_utilities.cpp  test_utilities.hpp  testset.py  utilities.cpp  utilities.hpp
tests/QuESTPy/: QuESTBase.py  QuESTFunc.py  QuESTLibDir.py  QuESTTypes.py  __init__.py
tests/QuESTTest/: QuESTCore.py  __main__.py  testset.py
tests/algor/: QFT.test  QFTtests  rotate_test.test
tests/benchmarks/: rotate_benchmark.test
tests/catch/: CMakeLists.txt  Catch.cmake  catch.hpp
tests/compilers/: compatibility.csv  compatibility.md  compatibility_reformatted.csv  cuda_versions.txt  gcc_versions.txt  icc_versions.txt  makefile  markdown_maker.py  mpi_versions.txt  runTests.sh  test.sh  testcode.cpp
tests/deprecated/: CMakeLists.txt  test_calculations.cpp  test_data_structures.cpp  test_decoherence.cpp  test_gates.cpp  test_main.cpp  test_operators.cpp  test_state_initialisations.cpp  test_unitaries.cpp  test_utilities.cpp  test_utilities.hpp
tests/essential/: createDensityQureg.test  initClassicalState.test  initZeroState.test  seedQuEST.test
tests/integration/: CMakeLists.txt  densitymatrix.cpp  placeholder.cpp
tests/unit/: CMakeLists.txt  applyOneQubitDephaseError0.out  applyOneQubitDephaseError1.out  applyOneQubitDephaseError2.out  applyOneQubitDepolariseError0.out  applyOneQubitDepolariseError1.out  applyTwoQubitDephaseError2.out  applyTwoQubitDephaseError4.out  applyTwoQubitDephaseError5.out  applyTwoQubitDepolariseError2.out  applyTwoQubitDepolariseError4.out  applyTwoQubitDepolariseError5.out  calculations.cpp  channels.cpp  controlNot1.out  controlNot6.out  controlNot9.out  controlRotateQubit2.out  controlRotateQubit6.out  controlRotateQubit7.out  controlledCompactUnitary1.out  controlledCompactUnitary3.out  controlledCompactUnitary4.out  controlledCompactUnitary5.out  controlledCompactUnitary8.out  controlledCompactUnitary9.out  controlledNot2.out  controlledNot3.out  controlledNot4.out  controlledNot5.out  controlledNot7.out  controlledNot8.out  controlledPhaseFlip1.out  controlledPhaseFlip2.out  controlledPhaseFlip3.out  controlledPhaseFlip4.out  controlledPhaseFlip5.out  controlledPhaseFlip6.out  controlledPhaseFlip7.out  controlledPhaseFlip8.out  (+37 more)
tests/unitPy/: AddDenMattests  (+42 more)
(+974 files in other folders)
